# rust-termx

./: Cargo.toml
examples/background/: Cargo.toml
examples/background/src/: main.rs  ui.xaml
screen-base/: Cargo.toml  README.md
screen-base/src/: lib.rs
screen-ncurses/: Cargo.toml  README.md  build.rs
screen-ncurses/src/: common.rs  lib.rs  ncurses.rs  non_unicode.rs  unicode.rs
src/: base.rs  components.rs  event_handler.rs  lib.rs  line_edit.rs  render_port.rs  resources.rs  systems.rs  template.rs  termx.rs  text_renderer.rs  view.rs  xaml.rs
src/components/: adorners_panel.rs  background.rs  border.rs  button.rs  canvas.rs  canvas_layout.rs  content_presenter.rs  control.rs  decorator.rs  focus_scope.rs  group_box.rs  input_element.rs  input_line.rs  items_presenter.rs  layout_view.rs  m_button.rs  m_input_line.rs  panel.rs  stack_panel.rs  static_text.rs  t_button.rs  t_input_line.rs  view.rs  view_layout.rs
src/systems/: init.rs  input.rs  layout.rs  reactive.rs  render.rs
