[package]
name = "termx"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "screen-base",
    "screen-ncurses",
]

[dependencies]
anycase = { version = "0.1.0", default-features = false, features = ["alloc"] }
basic-oop = "0.8.3"
dyn-clone = "1.0.20"
dynamic-cast = "0.2.0"
either = { version = "1.15.0", default-features = false }
hashbrown = "0.16.1"
int-vec-2d = { version = "0.2.1", features = ["serde"] }
iter-identify_first_last = "0.2.3"
itertools = { version = "0.14.0", default-features = false }
no-std-xml = { git = "https://github.com/A1-Triard/no-std-xml.git", version = "0.8.20" }
ooecs = "0.1.0"
paste = "1.0.15"
print-no-std = "0.3.0"
serde = { version = "1.0.228", default-features = false }
termx-screen-base = { version = "0.1.0", path = "screen-base" }
timer-no-std = "0.6.0"
typetag = "0.2.21"
